few more structure related fixes